feat: seguranca, novos endpoints e excecoes customizadas